# SuperEngine

./: CMakeLists.txt
Sandbox/: CMakeLists.txt
Sandbox/src/: CubeScript.cpp  TestScript.cpp  main.cpp
SuperEngine/: CMakeLists.txt
SuperEngine/assets/Meshes/: CubeMesh.mesh  PiramidMesh.mesh
SuperEngine/assets/Shaders/: ClearScreenCompute.hlsl  GeometryPass.hlsl  RasterizationPass.hlsl  Structs.hlsli
SuperEngine/include/SuperEngine/: GameObject.h  SuperEngine.h
SuperEngine/include/SuperEngine/Components/: Camera.h  Component.h  MeshRenderer.h  Transform.h
SuperEngine/include/SuperEngine/Engine/: AssetManager.h  Engine.h  RenderingManager.h
SuperEngine/include/SuperEngine/Graphics/: BuiltInShaders.h  ComputeShader.h  GraphicTypes.h  GraphicsDevice.h
SuperEngine/include/SuperEngine/Graphics/Mesh/: Mesh.h
SuperEngine/include/SuperEngine/Math/: Matrix4x4.h  Vector2.h  Vector3.h  Vector4.h
SuperEngine/include/SuperEngine/SceneManagement/: Scene.h
SuperEngine/src/SuperEngine/: GameObject.cpp  Time.cpp
SuperEngine/src/SuperEngine/Components/: Camera.cpp  MeshRenderer.cpp  Transform.cpp
SuperEngine/src/SuperEngine/Engine/: AssetManager.cpp  Engine.cpp  RenderingManager.cpp
SuperEngine/src/SuperEngine/Graphics/: BuiltInShaders.cpp  ComputeShader.cpp  GraphicsDevice.cpp
SuperEngine/src/SuperEngine/Graphics/Mesh/: Mesh.cpp
SuperEngine/src/SuperEngine/Math/: Matrix4x4.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
SuperEngine/src/SuperEngine/SceneManagement/: Scene.cpp
include/Core/: Component.h  Core.h  Engine.h  GameObject.h  IDManager.h  ILifecycle.h  Time.h
include/Core/Components/: Camera.h  Component.h  MeshRenderer.h  Test.h  Transform.h
include/Core/Engine/: Engine.h  RenderingManager.h
include/Core/Math/: Matrix4x4.h  Triangle.h  Vector2.h  Vector3.h  Vector4.h
include/Core/Mesh/: CubeMesh.h  Mesh.h
include/Core/SceneManagement/: Scene.h
src/: TestScript.cpp  main.cpp
src/Core/: Engine.cpp  GameObject.cpp  Time.cpp
src/Core/Components/: Camera.cpp  Transform.cpp
src/Core/Engine/: Engine.cpp  RenderingManager.cpp
src/Core/Math/: Matrix4x4.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
src/Core/SceneManagement/: Scene.cpp
